--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <link rel="stylesheet" href="styles/main.css">
+        <title>AppSus</title>
     </head>
     <body>
         
+        <div id="app"></div>
         
         <script src="lib/axios.js"></script>
         <script src="lib/vue.js"></script>
